--- a/css/kutyajokaracsony.css
+++ b/css/kutyajokaracsony.css
@@ -1,152 +1,180 @@
-* {box-sizing: border-box}
-
-body{
-     background-color:darkred;
-}
-
-.container{
-    margin-left:20px;
-    margin-right:20px;
-}
-header{
-    background-color:darkred;
-    background-image:url(../mese/pic/fej1.jpg),
-    url(../mese/pic/fej4.jpg), url(../mese/pic/fej5.jpg);
-    background-repeat: no-repeat,no-repeat,no-repeat,no-repeat,no-repeat,no-repeat;
-    background-position:left,center,right;
-    height:100px;
-    width:100%;
-}
-
-p{
-    font-size:20px;
-    font-family:'Yeon Sung',cursive;
+    * {
+        box-sizing: border-box
+    }
     
-}
-#mkF #oldalSzoveg{
-    cursor:pointer;
-}
-
-
-
-.navbar-brand{
-    color:black;
-}
-
-#logo{
-    border:3px solid yellow;
-}
-.kezdoOldal.img{
-    height:250px;
-    width:250px;
-}
-#felsoIdezet{
-    float:right;
-}
-
-.clearfix{
-    overflow:auto;
-}
-
-.col-md-4{
-    width:20%;
-    height:100%;
-    background-color:darkred;
-    padding:5px;
-    border: 3px solid black;
-}
-
-#f1,#f2,#f3,#f4{
-display:block;
-margin-left: auto;
-margin-right: auto;
-height: 300px;
-width:300px;
-
-}
-
-.embed-responsive{
-    width:350px;
-    height:200px;
-    border:3px solid white;
-    align-content: center;
-}
-.col-md-6{
-    display:block;
-    padding:15px;
-    margin-left:auto;
-    margin-right:auto;
-}
-.col-md-8{
-    display:block;
-    width:100%;
-    height:100%;
-    background-color:darkred;
-    margin:auto;
-}
-.tab {
-  line-height: 30px;
-  background-color:darkred;
-  width: 100%;
-  height:auto;
-}
-
-.row{
-    padding:10px;
-}
-.active{
-    font-weight:bold;
-}
-#elsoGif,#masodikGif,#harmadikGif{
-    margin:0 auto 0 auto;
-    height:30px;
-    width:30px;
-}
-#ablak,#oldalSzoveg,#alairas1,#alairas2{
-    background-color:darkred;
-}
-
-#oldalSzoveg{
-    font-style: bold;
-    text-align:center;
-}
-
-li{
-    list-style-type: none;
-}
-
-.clearfix{
-    overflow:auto;
-}
-
-/* Style the tab content */
-.tab-content {
-  padding:10px;
-  width: 100%;
-  background-color:darkred;
- 
-
-}
-
-#ef{
-    text-align: center;
-     margin:0 auto 0 auto;
-
-}
-
-#extra{
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-.kepdoboz{
-    max-width:720px;
-    margin:50px auto 20px;
-}
-
-.kepdoboz img-fluid{
-    width:100%;
-    border:4px solid white;
-    box-shadow:0 5px 25px rgba(0,0,0,0.5);
-}
+    body {
+        background-color: darkred;
+    }
+    
+    .container {
+        margin-top: 30px;
+        width: 100%;
+        /* border: 5px solid black; */
+    }
+    
+    header {
+        background-color: darkred;
+        background-image: url(../mese/pic/fej1.jpg), url(../mese/pic/fej4.jpg), url(../mese/pic/fej5.jpg);
+        background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+        background-position: left, center, right;
+        height: 100px;
+        width: 100%;
+    }
+    
+    p {
+        font-size: 20px;
+        font-family: 'Yeon Sung', cursive;
+    }
+    
+    #mkF #oldalSzoveg {
+        cursor: pointer;
+    }
+    
+    .navbar-brand {
+        color: black;
+    }
+    
+    #logo {
+        border: 3px solid yellow;
+    }
+    
+    .kezdoOldal.img {
+        height: 250px;
+        width: 250px;
+    }
+    
+    #felsoIdezet {
+        margin: 0 auto;
+        color: yellow;
+    }
+    
+    .clearfix {
+        overflow: auto;
+    }
+    
+    .col-md-3 {
+        width: 160px;
+        height: 100%;
+        background-color: darkred;
+        padding: 5px;
+        border: 3px solid black;
+        border-radius: 20px;
+        left: 0;
+    }
+    
+    .col-md-9 {}
+    
+    ;
+    #f1,
+    #f2,
+    #f3,
+    #f4 {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: 300px;
+        width: 300px;
+    }
+    
+    .embed-responsive {
+        width: 350px;
+        height: 200px;
+        border: 3px solid white;
+        align-content: center;
+    }
+    
+    .col-md-6 {
+        display: block;
+        padding: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .col-md-9 {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-color: darkred;
+        margin: auto;
+    }
+    
+    .tab {
+        line-height: 30px;
+        background-color: darkred;
+        width: 100%;
+        height: auto;
+    }
+    
+    .tablinks {
+        border-bottom: 2px solid black;
+    }
+    
+    .tablinks:hover {
+        background-color: rgb(255, 255, 255);
+        opacity: 0.5;
+    }
+    
+    .row {
+        padding: 10px;
+    }
+    
+    .active {
+        font-weight: bold;
+    }
+    
+    #elsoGif,
+    #masodikGif,
+    #harmadikGif {
+        margin: 0 auto 0 auto;
+        height: 30px;
+        width: 30px;
+    }
+    
+    #ablak,
+    #oldalSzoveg,
+    #alairas1,
+    #alairas2 {
+        background-color: darkred;
+    }
+    
+    #oldalSzoveg {
+        font-style: bold;
+        text-align: center;
+    }
+    
+    li {
+        list-style-type: none;
+    }
+    
+    .clearfix {
+        overflow: auto;
+    }
+    /* Style the tab content */
+    
+    .tab-content {
+        padding: 10px;
+        width: 100%;
+        background-color: darkred;
+    }
+    
+    #ef {
+        text-align: center;
+        margin: 0 auto 0 auto;
+    }
+    
+    #extra {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .kepdoboz {
+        max-width: 720px;
+        margin: 50px auto 20px;
+    }
+    
+    .kepdoboz img-fluid {
+        width: 100%;
+        border: 4px solid white;
+        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
+    }
