--- a/css/butor.css
+++ b/css/butor.css
@@ -5,7 +5,9 @@
 
 main{
     width:100%;
-    background-color:#9c8810;
+  
+    background-color: #4e2f1a;
+
     background-image:url(../butor/ahb.jpg);
     background-position: right;
     background-repeat: no-repeat;
