--- a/css/kutyajokaracsony.css
+++ b/css/kutyajokaracsony.css
@@ -55,7 +55,7 @@
     .col-md-3 {
         width: 160px;
         height: 100%;
-        background-color: darkred;
+        background-color: rgb(253, 237, 11);
         padding: 5px;
         border: 3px solid black;
         border-radius: 20px;
@@ -64,16 +64,14 @@
     
     .col-md-9 {}
     
-    ;
-    #f1,
-    #f2,
-    #f3,
-    #f4 {
+    
+    #f1,#f2,#f3,#f4 {
         display: block;
         margin-left: auto;
         margin-right: auto;
         height: 300px;
         width: 300px;
+        border:5px solid rgba(5, 250, 107, 0.5)
     }
     
     .embed-responsive {
@@ -154,7 +152,12 @@
     .tab-content {
         padding: 10px;
         width: 100%;
-        background-color: darkred;
+        background-image:url(../pics/gyujtes/fal.jpg);
+        border-radius:25px;
+    }
+
+    .tab-content :img-fluid{
+
     }
     
     #ef {
@@ -177,4 +180,9 @@
         width: 100%;
         border: 4px solid white;
         box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
+    }
+    .fejezetkepek
+    {
+        margin:0 auto 0 auto;
+        border:2px solid rgba(5, 250, 107, 0.5);
     }
