--- a/css/mese.css
+++ b/css/mese.css
@@ -37,16 +37,15 @@ h1 {
 }
 
 h2 {
-    background-color: beige;
+    background-image: url(../pics/gyujtes/fekete-sarga.jpg);
     margin-top: 5px;
     padding: 5px;
-    border: 5px solid white;
+    border: 3px solid rgb(243, 133, 7);
     text-align: center;
     font-family: 'Cinzel', serif;
     padding-top: 10px;
     font-size: 25px;
-    font-weight: 400;
-    text-emphasis-style: filled;
+    color:rgb(5, 97, 43);
     border-radius: 25px;
     width: 100%;
 }
@@ -74,6 +73,7 @@ h5 {
 }
 
 #oldalMenu {
+    padding-left:15px;
     border-left: 3px solid black;
     border-image: url(../pics/t1.png) 50 round;
     border-image-width: 20px;
