--- a/css/kapcsolat.css
+++ b/css/kapcsolat.css
@@ -3,127 +3,44 @@
     box-sizing:border-box;
 }
 
-.container1 bg-success{
-    margin:0 auto 0 auto;
+body{
+    background-color:rgb(27, 23, 23);
 }
 
 
-
-.form-group{
-    width:30%;
-}
-
-#kep1{
-    border-radius:5px;
-    cursor:pointer;
-    transition:0.3s;
-}
-
-#kep1:hover{
-    opacity:0.7;
-}
-
-.modal{
-    display:none;
-    position:fixed;
-    z-index:1;
-    padding-top:100px;
-    left:0;
-    top:0;
+.container1{
+    background-color: rgba(rgb(46, 46, 46));
     width:100%;
-    height:100%;
-    overflow:auto;
-    background-color:rgb(0,0,0);
-    background-color:rgba(0,0,0,0.9);
-}
-
-.modal-content{
-    margin:auto;
-    display:block;
-    width:80%;
-    max-width: 700px;
-}
-
-#caption{
-    margin:auto;
-    display:block;
-    width:80%;
-    max-width:700px;
-    text-align:center;
-    color:#ccc;
-    padding:10px 0;
-    height: 150px;
-}
-#elem{
-    height:100px;
-    width:40%;
-    margin:10px auto 0 auto;
-    padding-top:10px;
-}
-
-.modal-content, #caption{
-    animation-name:zoom;
-    animation-duration:0.6s;
-}
-
-@keyframes zoom{
-    from{transform: scale(0)}
-    to{transform:scale(1)}
-}
-
-/*Clos button*/
-.close{
-    position:absolute;
-    top:15px;
-    right:35px;
-    color:#f1f1f1;
-    font-size:40px;
-    font-weight: bold;
-    transition:0.3s;
-}
-
-.close:hover,
-.close:focus{
-    color:#bbb;
-    text-decoration: none;
-    cursor:pointer;
-}
-
-@media only screen and (max-width:700px){
-    .modal-content{
-        width:100%;
-    }
-}
-
-ul{
-    text-align: center;
-    list-style-type: none;
 }
 
 
-
-label:first-child{
-    font-weight: 300;
+main{
+    margin:0 auto;
+    width:60%;
+    height: auto;
+    background-color: rgba(rgb(46, 46, 46));
 }
-
-.col-md-12{
-    margin:0 auto 0 auto;
-}
-
 
 fieldset{
     border:4px solid black;
     border-radius:25px;
     background-color: aqua;
-    min-width: 300px;
+    width:30%;
     padding:10px;
    
 }
 
 #elem{
     background-image:url("../pics/gyujtes/contact.jpg");
+    background-repeat: no-repeat;
     background-size:cover;
-    
-    height: auto;
     width: 100%;
+}
+
+.contactpieces{
+    opacity:1.0;
+}
+
+footer{
+    height:50%;
 }
