--- a/css/restauralas.css
+++ b/css/restauralas.css
@@ -45,10 +45,10 @@
                     transition: all 0.3s;
                 }
                 
-                .listakomponensek {
+             /*    .listakomponensek {
                     overflow-y: auto;
                 }
-                
+                 */
                 #sidebar .sidebar-header {
                     padding: 20px;
                     background: #6d7fcc;
@@ -165,3 +165,21 @@
                 .sidebar-header {
                     height: 50px;
                 }
+
+                p{
+                    font-size:18px;
+                }
+
+                .img-magnifier-container {
+                    position:relative;
+                  }
+
+                  .img-magnifier-glass {
+                    position: absolute;
+                    border: 3px solid #000;
+                    border-radius: 50%;
+                    cursor: none;
+                    /*Set the size of the magnifier glass:*/
+                    width: 100px;
+                    height: 100px;
+                  }
