--- a/css/ajandektargyak.css
+++ b/css/ajandektargyak.css
@@ -7,12 +7,15 @@
     }
     
     body {
-        width: fit-content;
+        width: 100%;
         background-color: orange;
         font-family: Arial;
-        height: 100%;
+        height: auto;
     }
     
+    body::after {
+background-color:green;
+    }
     .main {
         margin: 0 auto 0 auto;
     }
