--- a/css/restauralas.css
+++ b/css/restauralas.css
@@ -3,7 +3,7 @@
                 }
                 
                 body {
-                    background-image: url("../pics/gyujtes/szurke.jpg");
+                    background-image: url("../pics/gyujtes/fás.jpg");
                 }
                 
                 #tartalom {
@@ -40,15 +40,16 @@
                     min-width: 250px;
                     max-width: 250px;
                     min-height: 100vh;
-                    background: #738605;
+
+                    background: url('../pics/gyujtes/vizszintesfa.jpg');
                     color: black;
-                    transition: all 0.3s;
+                    transition: all 0.5s;
                 }
                 
-             /*    .listakomponensek {
-                    overflow-y: auto;
-                }
-                 */
+          /*      .listakomponensek {
+             font-size:16px;     
+                } */
+                 
                 #sidebar .sidebar-header {
                     padding: 20px;
                     background: #6d7fcc;
@@ -66,8 +67,8 @@
                 }
                 
                 #sidebar ul li a:hover {
-                    color: #738605;
-                    background: black;
+                    color: whitesmoke;
+                    background: rgb(73, 72, 72);
                 }
                 
                 ul ul a {
@@ -99,7 +100,9 @@
                 
                 #myCarousel {
                     display: flex;
-                    border: 5px solid brown;
+                    border: 3px solid rgb(204, 233, 100);
+                    border-radius:10px;
+                    box-shadow:20px 30px 10px black;
                 }
                 
                 #btnElore {
@@ -115,6 +118,7 @@
                 }
                 
                 .kepek {
+                   
                     margin: 0 auto 0 auto;
                 }
                 
@@ -122,6 +126,7 @@
                     display: flex;
                     width: 100%;
                     align-items: stretch;
+                    padding-left: 10px;
                 }
                 
                 #kozepso {
@@ -137,7 +142,9 @@
                 h3 {
                     text-align: center;
                     padding: 2px;
-                    font-size: 12px;
+                    font-size: 18px;
+                    font-weight: 600;
+                    background-color: maroon;
                 }
                 
                 h4 {
@@ -185,6 +192,8 @@
                     
                   }
 
-                .carousel-item{
+                .carousel-item{    
                     cursor:none;
                 }
+
+              
