--- a/css/restauralas.css
+++ b/css/restauralas.css
@@ -1,199 +1,200 @@
-                * {
-                    box-sizing: border-box;
-                }
-                
-                body {
-                    background-image: url("../pics/gyujtes/fás.jpg");
-                }
-                
-                #tartalom {
-                    width: 100%;
-                }
-                
-                .gombok {
-                    top: 0;
-                    left: 0;
-                }
-                
-                #myBtn,
-                #btnElore,
-                #kioldogomb {
-                    left: 0;
-                    height: 50px;
-                    width: 80px;
-                    text-align: left;
-                    border: 1px solid #ffcc66;
-                    font-style: italic;
-                    color: black;
-                    border-radius: 5px;
-                }
-                
-                a,
-                a:hover,
-                a:focus {
-                    color: inherit;
-                    text-decoration: none;
-                    transition: all 0.3s;
-                }
-                
-                #sidebar {
-                    min-width: 250px;
-                    max-width: 250px;
-                    min-height: 100vh;
-
-                    background: url('../pics/gyujtes/vizszintesfa.jpg');
-                    color: black;
-                    transition: all 0.5s;
-                }
-                
-          /*      .listakomponensek {
+                        * {
+                        box-sizing: border-box;
+                    }
+                    
+                    body {
+                        background-image: url("../pics/gyujtes/fás.jpg");
+                    }
+                    
+                    #tartalom {
+                        width: 100%;
+                    }
+                    
+                    .gombok {
+                        top: 0;
+                        left: 0;
+                    }
+                    
+                    #myBtn,
+                    #btnElore,
+                    #kioldogomb {
+                        left: 0;
+                        height: 50px;
+                        width: 80px;
+                        text-align: left;
+                        border: 1px solid #ffcc66;
+                        font-style: italic;
+                        color: black;
+                        border-radius: 5px;
+                    }
+                    
+                    a,
+                    a:hover,
+                    a:focus {
+                        color: inherit;
+                        text-decoration: none;
+                        transition: all 0.3s;
+                    }
+                    
+                    #sidebar {
+                        min-width: 250px;
+                        max-width: 250px;
+                        min-height: 100vh;
+                        background: url('../pics/gyujtes/vizszintesfa.jpg');
+                        color: black;
+                        transition: all 0.5s;
+                    }
+                    /*      .listakomponensek {
              font-size:16px;     
                 } */
-                 
-                #sidebar .sidebar-header {
-                    padding: 20px;
-                    background: #6d7fcc;
-                }
-                
-                #sidebar ul.listakomponensek {
-                    padding: 20px 0;
-                    border-bottom: 1px solid #47748b;
-                }
-                
-                #sidebar ul li a {
-                    padding: 10px;
-                    font-size: 0.5em;
-                    display: block;
-                }
-                
-                #sidebar ul li a:hover {
-                    color: whitesmoke;
-                    background: rgb(73, 72, 72);
-                }
-                
-                ul ul a {
-                    font-size: 0.9em !important;
-                    padding-left: 30px !important;
-                    background: #6d7fcc;
-                }
-                
-                #sidebar.active {
-                    margin-left: -250px;
-                }
-                
-                @media(max-width:768px) {
-                    #sidebar {
-                        margin-left: -250px;
+                    
+                    #sidebar .sidebar-header {
+                        padding: 20px;
+                        background: #6d7fcc;
                     }
+                    
+                    #sidebar ul.listakomponensek {
+                        padding: 20px 0;
+                        border-bottom: 1px solid #47748b;
+                    }
+                    
+                    #sidebar ul li a {
+                        padding: 10px;
+                        font-size: 0.5em;
+                        display: block;
+                    }
+                    
+                    #sidebar ul li a:hover {
+                        color: whitesmoke;
+                        background: rgb(73, 72, 72);
+                    }
+                    
+                    ul ul a {
+                        font-size: 0.9em !important;
+                        padding-left: 30px !important;
+                        background: #6d7fcc;
+                    }
+                    
                     #sidebar.active {
                         margin-left: -250px;
                     }
-                }
-                
-                .container py-3 {
-                    border: 5px solid black;
-                }
-                
-                .container mt-3 {
-                    margin: 5px auto 0 auto;
-                }
-                
-                #myCarousel {
-                    display: flex;
-                    border: 3px solid rgb(204, 233, 100);
-                    border-radius:10px;
-                    box-shadow:20px 30px 10px black;
-                }
-                
-                #btnElore {
-                    background-color: darkolivegreen;
-                }
-                
-                #kioldogomb {
-                    background-color: darkorchid;
-                }
-                
-                #cim {
-                    text-align: center;
-                }
-                
-                .kepek {
-                   
-                    margin: 0 auto 0 auto;
-                }
-                
-                .wrapper {
-                    display: flex;
-                    width: 100%;
-                    align-items: stretch;
-                    padding-left: 10px;
-                }
-                
-                #kozepso {
-                    background-image: url("../pics/wooden.jpg");
-                    border: 5px solid green;
-                }
-                
-                #elsoTema,
-                #masodikTema {
-                    font-size: 10px;
-                }
-                
-                h3 {
-                    text-align: center;
-                    padding: 2px;
-                    font-size: 18px;
-                    font-weight: 600;
-                    background-color: maroon;
-                }
-                
-                h4 {
-                    padding: 2px;
-                    text-align: center;
-                    font-size: 15px;
-                    font-weight: 300;
-                }
-                
-                .col-md-2 {
-                    display: flex;
-                    width: auto;
-                }
-                
-                .col-md-10 {
-                    display: relative;
-                    width: auto;
-                }
-                /*Gombok színei*/
-                
-                li {
-                    height: 20px;
-                }
-                
-                .sidebar-header {
-                    height: 50px;
-                }
-
-                p{
-                    font-size:18px;
-                }
-
-                .img-magnifier-container {
-                    position:relative;
-            
-                  }
-
-                  .img-magnifier-glass {
-                    position: absolute;
-                    border: 3px solid #000;
-                    border-radius: 50%;
-                    /*Set the size of the magnifier glass:*/
-                    width: 100px;
-                    height: 100px;
                     
-                  }
-
-                .carousel-item{    
-                    cursor:none;
-                }
-
-              
+                    @media(max-width:768px) {
+                        #sidebar {
+                            margin-left: -250px;
+                        }
+                        #sidebar.active {
+                            margin-left: -250px;
+                        }
+                    }
+                    
+                    .container py-3 {
+                        border: 5px solid black;
+                    }
+                    
+                    .container mt-3 {
+                        margin: 5px auto 0 auto;
+                    }
+                    
+                    #myCarousel {
+                        display: flex;
+                        border: 3px solid rgb(204, 233, 100);
+                        border-radius: 10px;
+                        box-shadow: 20px 30px 10px black;
+                    }
+                    
+                    #btnElore {
+                        background-color: darkolivegreen;
+                    }
+                    
+                    #kioldogomb {
+                        background-color: darkorchid;
+                    }
+                    
+                    #cim {
+                        text-align: center;
+                    }
+                    
+                    .kepek {
+                        max-height: 500px;
+                        margin: 0 auto 0 auto;
+                    }
+                    
+                    .wrapper {
+                        display: flex;
+                        width: 100%;
+                        align-items: stretch;
+                        padding-left: 10px;
+                    }
+                    
+                    #kozepso {
+                        background-image: url("../pics/wooden.jpg");
+                        border: 5px solid green;
+                    }
+                    
+                    #elsoTema,
+                    #masodikTema {
+                        font-size: 10px;
+                    }
+                    
+                    h3 {
+                        text-align: center;
+                        padding: 2px;
+                        font-size: 18px;
+                        font-weight: 600;
+                        background-color: maroon;
+                    }
+                    
+                    h4 {
+                        padding: 2px;
+                        text-align: center;
+                        font-size: 15px;
+                        font-weight: 300;
+                    }
+                    
+                    .col-md-2 {
+                        display: flex;
+                        width: auto;
+                    }
+                    
+                    .col-md-10 {
+                        display: relative;
+                        width: auto;
+                    }
+                    /*Gombok színei*/
+                    
+                    li {
+                        height: 20px;
+                    }
+                    
+                    .sidebar-header {
+                        height: 50px;
+                    }
+                    
+                    p {
+                        font-size: 18px;
+                    }
+                    
+                    .img-magnifier-container {
+                        position: relative;
+                    }
+                    
+                    .img-magnifier-glass {
+                        position: absolute;
+                        border: 3px solid #000;
+                        border-radius: 50%;
+                        /*Set the size of the magnifier glass:*/
+                        width: 100px;
+                        height: 100px;
+                    }
+                    
+                    .carousel-item {
+                        cursor: none;
+                    }
+                    
+                    .lovas {
+                        max-width: 1200px;
+                    }
+                    
+                    li {
+                        list-style-type: none;
