--- a/css/butor.css
+++ b/css/butor.css
@@ -1,53 +1,53 @@
-
-*{
-    box-sizing:border-box;
+* {
+    box-sizing: border-box;
 }
 
-main{
-    width:100%;
-  
-    background-color: #4e2f1a;
-
-    background-image:url(../butor/ahb.jpg);
+main {
+    width: 100%;
+    /* background-color: #4e2f1a; */
+    background-image: url(../butor/ahb.jpg);
     background-position: right;
     background-repeat: no-repeat;
     background-repeat: repeat-y;
-    
-   
 }
 
-
-
-#golyaslogo,#fb,#tel{
+#golyaslogo,
+#fb,
+#tel {
     -webkit-box-shadow: 0px 0px 0px 0px;
-    -moz-box-shadow: 0px 0px 0px 0px ;
-    box-shadow: 0px 0px 0px 0px ;
-    border:3px solid black;
+    -moz-box-shadow: 0px 0px 0px 0px;
+    box-shadow: 0px 0px 0px 0px;
+    border: 3px solid black;
 }
-h3{
-    font-family:'Palanquin Dark', sans-serif;
+
+h3 {
+    font-family: 'Palanquin Dark', sans-serif;
     text-align: center;
-    font-size:35px;
-   
+    font-size: 35px;
+    color: hsl(17, 100%, 60%)
 }
 
-h4{
-    font-family:'Chakra Petch', sans-serif;
+h4 {
+    font-family: 'Chakra Petch', sans-serif;
     text-align: center;
-    color:yellow;
-    font-size:20px;
-    text-shadow: 2px 2px  #000000;
+    color: yellow;
+    font-size: 20px;
+    text-shadow: 2px 2px #000000;
 }
 
-
-.img-fluid{
-    width:300px;
-    border:5px solid #4e2f1a;
-   
-    
+.img-fluid {
+    width: 300px;
+    border: 5px solid #4e2f1a;
 }
-#kep1,#kep2,#kep3,#kep4,#kep5,#kep6,#kep7,#kep8{
-display: block;
-margin:0 auto 0 auto; 
- 
+
+#kep1,
+#kep2,
+#kep3,
+#kep4,
+#kep5,
+#kep6,
+#kep7,
+#kep8 {
+    display: block;
+    margin: 0 auto 0 auto;
 }
