--- a/css/bemutatkozas.css
+++ b/css/bemutatkozas.css
@@ -17,16 +17,21 @@ body {
     /* padding: 20px; */
 
 
-/* height: 100%; */
 
 
-}
+
+
 */ .container mt-3 {
     background-color: yellow;
 }
 nav.breadcrumb {
     margin: 0 0 10px 0;
     padding: 0;
+}
+
+nav.link{
+    font-family: "Arial Black" sans-serif;
+    color:green;
 }
 header {
     padding: 20px 0;
@@ -54,7 +59,7 @@ p {
     background-size: contain;
     border-radius: 25px solid gold;
     align-content: stretch;
-    border: 5px #EB18D5 solid;
+    border: 3px #EB18D5 solid;
     width: 100%;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
@@ -64,7 +69,7 @@ p {
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-position: left, center, right;
     margin: 0 auto 0 auto;
-    background-color: rgb(218, 10, 173);
+    background-color: rgb(167, 13, 133);
     box-shadow: 7px 7px 7px #F5F900;
 }
 #bemutatkozas {
