--- a/css/butor.css
+++ b/css/butor.css
@@ -9,35 +9,34 @@ main {
     background-position: right;
     background-repeat: no-repeat;
     background-repeat: repeat-y;
+    background-color: rgb(100, 72, 2);
 }
 
-#golyaslogo,
-#fb,
-#tel {
+#golyaslogo,#fb,#tel {
     -webkit-box-shadow: 0px 0px 0px 0px;
     -moz-box-shadow: 0px 0px 0px 0px;
     box-shadow: 0px 0px 0px 0px;
-    border: 3px solid black;
+    border: 2px solid rgb(243, 240, 240);
 }
 
 h3 {
     font-family: 'Palanquin Dark', sans-serif;
-    text-align: center;
+    text-align: left;
     font-size: 35px;
-    color: hsl(17, 100%, 60%)
+    color: hsl(61, 100%, 60%)
 }
 
 h4 {
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: 'Dancing Script', sans-serif;
     text-align: center;
-    color: yellow;
-    font-size: 20px;
-    text-shadow: 2px 2px #000000;
+    color: rgb(29, 29, 4);
+    font-size: 18px;
+    /* text-shadow: 2px 2px #000000; */
 }
 
 .img-fluid {
-    width: 300px;
-    border: 5px solid #4e2f1a;
+    width: 200px;
+    border: 1px solid #fad400;
 }
 
 #kep1,
@@ -49,5 +48,5 @@ h4 {
 #kep7,
 #kep8 {
     display: block;
-    margin: 0 auto 0 auto;
+    margin: 0 auto 2px auto;
 }
