--- a/css/kapcsolat.css
+++ b/css/kapcsolat.css
@@ -6,31 +6,32 @@ body {
     background-color: rgb(27, 23, 23);
 }
 
-.container1 {
+/* .container1 {
     background-color: rgba(rgb(46, 46, 46));
-    width: 100%;
-}
+    width: auto;
+} */
 
 main {
-    margin: 0 auto;
+    /* margin: 0 auto;
     width: 60%;
     height: auto;
-    background-color: rgba(rgb(46, 46, 46));
+    background-color: rgba(rgb(46, 46, 46)); */
 }
 
 fieldset {
     border: 4px solid black;
     border-radius: 25px;
     background-color: aqua;
+    
     width: 30%;
     padding: 10px;
 }
 
-#elem {
+#backgroundPicture {
     background-image: url("../pics/gyujtes/contact.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
+    width:100%;
+   
 }
 
 .contactpieces {
