--- a/css/bemutatkozas.css
+++ b/css/bemutatkozas.css
@@ -2,12 +2,14 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 body {
     background-color: RGB(117, 77, 149);
-    font-family: sans-serif;
+    font-family: 'Great Vibes', cursive;
     background-image: url("../pics/golyafej.png"), url("../pics/golyafej2.png");
     background-repeat: repeat-y, repeat-y;
-    background-position: right 25.5% , left  25.5%;
+    background-position: right 25.5%, left 25.5%;
 }
 
 
@@ -16,45 +18,47 @@ body {
     background-repeat: no-repeat;
     /* padding: 20px; */
 
-
-
-
-
-
 */ .container mt-3 {
     background-color: yellow;
 }
+
 nav.breadcrumb {
     margin: 0 0 10px 0;
     padding: 0;
 }
 
-nav.link{
+nav.link {
     font-family: "Arial Black" sans-serif;
-    color:green;
+    color: green;
 }
+
 header {
     padding: 20px 0;
 }
+
 #idezet {
     text-align: center;
 }
+
 .img-fluid {
     height: 250px;
     width: 33%;
     margin: 0 auto 0 auto;
 }
+
 p {
     font-family: "Arial" Times sans-serif;
     font-style: oblique;
     text-align: justify;
     color: gold;
 }
+
 .zsofioldala {
     /* width: 100%; */
     /* background-image: url(../pics/gyujtes/muveszi-aranycsillag.jpg); */
     /* background-size: cover; */
 }
+
 .jumbotron {
     background-size: contain;
     border-radius: 25px solid gold;
@@ -72,6 +76,7 @@ p {
     background-color: rgb(167, 13, 133);
     box-shadow: 7px 7px 7px #F5F900;
 }
+
 #bemutatkozas {
     background-color: #404F17;
     color: white;
@@ -79,14 +84,18 @@ p {
     text-align: justify;
     border-radius: 25px;
 }
+
 h1 {
     text-indent: 48px;
     text-align: center;
+    font-family: 'Great Vibes', cursive;
 }
+
 h2 {
     font-size: 18;
     text-decoration: underline;
 }
+
 .card border-primary mb-3,
 card border-secondary mb-3,
 card border-succes mb-3 {
@@ -95,27 +104,34 @@ card border-succes mb-3 {
     border-left-color: #EFEA5A;
     border-right-color: #FE5E41;
 }
+
 #gondolatok {
     background-color: #469A7A;
     border: 3px solid #DB492F;
     box-shadow: 0 0 10px 4px #FF6347, 0 0 5px 5px #FFDAB9;
 }
+
 #idezet {
     margin-left: 100px;
 }
+
 .card-header {
     border: 5px solid #f51ef8;
     box-shadow: (50px 9px 20px gray);
     -ms-transform: rotate(5deg);
     /* IE 9 */
-    
     -webkit-transform: rotate(5deg);
     /* Safari prior 9.0 */
-    
     transform: rotate(5deg);
     background-color: #bf9400;
     font-family: serif;
 }
+
 .card-body {
     border: 5px solid #2df2f4;
+}
+
+.nav-link {
+    color: aqua;
+    font-family: 'Roboto', sans-serif;
 }
