--- a/css/grafika.css
+++ b/css/grafika.css
@@ -1,40 +1,35 @@
-
-*{
-    box-sizing:border-box;
-}
-body{
-    background-color:#900C3F;
-    
+* {
+    box-sizing: border-box;
 }
 
+body {
+    background-color: #900C3F;
+}
 
-
-.kepSzoveg{
-    font-family:"Lora", serif;
+.kepSzoveg {
+    font-family: "Lora", serif;
     font-size: 20px;
-    text-align:center;
+    text-align: center;
     font-weight: 500;
-    color:yellow;
-
+    color: yellow;
 }
 
-.tartalom{
-    width:90%;
+.tartalom {
+    width: 90%;
 }
+
 .img-fluid {
-    margin:0 auto 0 auto;
-    border:5px solid #114f6e;
+    margin: 0 auto 0 auto;
+    border: 2px solid #114f6e;
 }
 
-#oldalKep{
-    float:right;
+#holdesgolya {
+    margin-top: 10px;
+    float: right;
 }
 
-.szentek{
+.szentek {
     font-weight: 200;
     text-align: justify;
-    visibility:hidden;
- 
-
+    visibility: hidden;
 }
-
