--- a/css/index.css
+++ b/css/index.css
@@ -1,69 +1,80 @@
-        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-        * {
-            box-sizing: border-box;
-        }
-        
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-        
-        main {
-            /* width: 100%; */
-            background-color: #2b82bd;
-        }
-        
-        .szovegsav {
-            color: black;
-        }
-        
-        .col-sm-6 {
-            text-align: center;
-            width: 20%;
-        }
-        
-        h1 {
-            font-family: 'Great Vibes', cursive !important;
-            border-radius: 25px;
-            animation: creator 5s infinite;
-        }
-        
-        @keyframes creator {
-            50% {
-                box-shadow: 10px 20px 30px rgb(250, 249, 246);
+            * {
+                box-sizing: border-box;
             }
-        }
-        
-        #carouselExampleIndicators .img-fluid {
-            height: 100%;
-            width: 50%;
-        }
-        
-        .embed-responsive {
-            border-radius: 25px;
-            border: 3px solid gray;
-        }
-        
-        .container mt-3 {
-            margin: 0 auto 0 auto;
-            /* position: absolute; */
-        }
-        
-        .carousel-item {
-            width: 500px;
-            height: 500px;
-            object-fit: cover;
-        }
-        
-        .nav-link {
-            color: rgb(240, 154, 6);
-            font-family: 'Roboto', sans-serif;
-        }
-        
-        ul {
-            list-style-type: none;
-        }
-        
-        footer {
-            font-family: 'Roboto', sans-serif;
-        }
+            
+            @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+            body {
+                font-family: 'Great Vibes', cursive;
+                background-color: #5bc0de;
+                display: block;
+            }
+            
+            main {
+                background-color: #2b82bd;
+                display: flex;
+            }
+            
+            .img-fluid {
+                width: 400px;
+                height: 360px;
+            }
+            
+            .szovegsav {
+                color: black;
+            }
+            
+            h1 {
+                font-family: 'Great Vibes', cursive !important;
+                border-radius: 25px;
+                /* animation: creator 5s infinite; */
+            }
+            /*       @keyframes creator {
+                50% {
+                    box-shadow: 10px 20px 30px rgb(250, 249, 246);
+                }
+            } */
+            
+            #myCarousel {
+                margin: auto;
+            }
+            
+            .embed-responsive {
+                border-radius: 25px;
+                border: 3px solid gray;
+            }
+            
+            .nav-item {
+                display: flex;
+                align-items: center;
+            }
+            
+            .nav-item img {
+                margin-right: 10 px;
+            }
+            
+            .nav-item .menu_telefonszam {
+                margin-left: 10px;
+                white-space: nowrap;
+            }
+            
+            #telefonikon {
+                display: inline-block;
+            }
+            
+            .nav-link {
+                color: rgb(240, 154, 6);
+                font-family: 'Roboto', sans-serif;
+            }
+            
+            ul {
+                list-style-type: none;
+            }
+            
+            footer {
+                font-family: inherit;
+                display: flex;
+                height: 50px;
+                padding-top: 3px;
+                padding-bottom: 3px;
+            }
