--- a/css/kapcsolat.css
+++ b/css/kapcsolat.css
@@ -6,23 +6,20 @@ body {
     background-color: rgb(27, 23, 23);
 }
 
+
 /* .container1 {
     background-color: rgba(rgb(46, 46, 46));
     width: auto;
 } */
 
 main {
-    /* margin: 0 auto;
-    width: 60%;
-    height: auto;
-    background-color: rgba(rgb(46, 46, 46)); */
+    margin: 0 auto;
 }
 
 fieldset {
     border: 4px solid black;
     border-radius: 25px;
     background-color: aqua;
-    
     width: 30%;
     padding: 10px;
 }
@@ -30,10 +27,14 @@ fieldset {
 #backgroundPicture {
     background-image: url("../pics/gyujtes/contact.jpg");
     background-repeat: no-repeat;
-    width:100%;
-   
+    width: 100%;
 }
 
 .contactpieces {
     opacity: 1.0;
+}
+
+footer {
+    position: fixed;
+    padding: 20px;
 }
