--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,8 @@
             border-radius: 25px;
             border: 3px solid gray;
         }
-        /*    .nav {
+        
+        .navbar-nav {
             display: grid;
             grid-template-rows: 1fr 1fr;
             justify-items: center;
@@ -56,7 +57,6 @@
         .bottom-row {
             grid-row: 2/3;
         }
-         */
         
         .nav-item {
             display: flex;
