--- a/css/bemutatkozas.css
+++ b/css/bemutatkozas.css
@@ -6,7 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 body {
     background-color: RGB(117, 77, 149);
-    font-family: 'Great Vibes', cursive;
+    /* font-family: 'Great Vibes', cursive; */
+    font-family: "Roboto" sans-serif;
     background-image: url("../pics/golyafej.png"), url("../pics/golyafej2.png");
     background-repeat: repeat-y, repeat-y;
     background-position: right 25.5%, left 25.5%;
@@ -22,7 +23,6 @@ nav.breadcrumb {
 }
 
 nav.link {
-    font-family: "Roboto" sans-serif;
     color: green;
 }
 
