--- a/css/index.css
+++ b/css/index.css
@@ -1,125 +1,126 @@
-        * {
-            box-sizing: border-box;
-        }
-        
-        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-        body {
-            font-family: 'Great Vibes', cursive;
-            background-color: #5bc0de;
-            display: block;
-        }
-        
-        main {
-            background-color: #2b82bd;
-            display: flex;
-        }
-        
-        .img-fluid {
-            width: 400px;
-            height: 360px;
-        }
-        
-        .szovegsav {
-            color: black;
-        }
-        
-        h1 {
-            font-family: 'Great Vibes', cursive !important;
-            border-radius: 25px;
-            /* animation: creator 5s infinite; */
-        }
-        /*       @keyframes creator {
-                50% {
-                    box-shadow: 10px 20px 30px rgb(250, 249, 246);
-                }
-            } */
-        
-        #myCarousel {
-            margin: auto;
-        }
-        
-        .embed-responsive {
-            border-radius: 25px;
-            border: 3px solid gray;
-        }
-        /*   .navbar-nav {
-            display: grid;
-            grid-template-rows: 1fr 1fr;
-            justify-items: center;
-        } */
-        
-        .nav-item {
-            display: flex;
-            align-items: center;
-        }
-        
-        .nav-item img {
-            margin-right: 10 px;
-        }
-        
-        .nav-item .menu_telefonszam {
-            margin-left: 10px;
-            white-space: nowrap;
-        }
-        
-        #hamburgermenü {
-            font-family: 'Roboto', sans-serif !important;
-        }
-        
-        #telefonikon {
-            display: inline-block;
-            font-family: 'Roboto', sans-serif !important;
-        }
-        
-        .nav-link {
-            color: rgb(240, 154, 6);
-            font-family: 'Roboto', sans-serif;
-        }
-        
-        ul {
-            list-style-type: none;
-        }
-        /*Search*/
-        
-        form.example input[type=text] {
-            padding: 5px;
-            font-size: 17px;
-            border: 1px solid grey;
-            float: left;
-            width: 80%;
-            background: #f1f1f1;
-        }
-        
-        form.example button {
-            float: left;
-            width: 20%;
-            padding: 10px;
-            background: #2196F3;
-            color: white;
-            font-size: 17px;
-            border: 1px solid grey;
-            border-left: none;
-            cursor: pointer;
-        }
-        
-        form.example button:hover {
-            background: #0b7dda;
-        }
-        
-        form.example::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-        /*media queries*/
-        
-        @media only screen and(max-width:768px) {}
-        
-        footer {
-            font-family: inherit;
-            display: flex;
-            height: 50px;
-            padding-top: 3px;
-            padding-bottom: 3px;
-        }
+            * {
+                box-sizing: border-box;
+            }
+            
+            @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+            body {
+                font-family: 'Great Vibes', cursive;
+                background-color: #5bc0de;
+                display: block;
+            }
+            
+            main {
+                background-color: #2b82bd;
+                display: flex;
+            }
+            
+            .img-fluid {
+                width: 400px;
+                height: 360px;
+            }
+            
+            #golyalogo {}
+            
+            .carousel-caption {
+                font-family: 'Roboto', sans-serif;
+            }
+            
+            .szovegsav {
+                color: black;
+            }
+            
+            h1 {
+                font-family: 'Great Vibes', cursive !important;
+                border-radius: 25px;
+                font: 300;
+            }
+            
+            h4,
+            h6 {
+                font-family: 'Roboto', sans-serif;
+            }
+            
+            #myCarousel {
+                margin: auto;
+            }
+            
+            .embed-responsive {
+                border-radius: 25px;
+                border: 3px solid gray;
+            }
+            
+            .nav-item {
+                display: flex;
+                align-items: center;
+            }
+            
+            .nav-item img {
+                margin-right: 5 px;
+            }
+            
+            .nav-item .menu_telefonszam {
+                margin-left: 10px;
+                white-space: nowrap;
+            }
+            
+            #hamburgermenü {
+                font-family: 'Roboto', sans-serif !important;
+            }
+            
+            .menu_telefonszam {
+                display: block;
+                font-family: 'Roboto', sans-serif !important;
+            }
+            
+            .nav-link {
+                color: rgb(240, 154, 6);
+                font-family: 'Roboto', sans-serif;
+            }
+            
+            ul {
+                list-style-type: none;
+            }
+            /*Search*/
+            
+            form.example input[type=text] {
+                padding: 5px;
+                font-size: 17px;
+                border: 1px solid grey;
+                float: left;
+                width: 80%;
+                background: #f1f1f1;
+            }
+            
+            form.example button {
+                float: left;
+                width: 20%;
+                padding: 10px;
+                background: #2196F3;
+                color: white;
+                font-size: 17px;
+                border: 1px solid grey;
+                border-left: none;
+                cursor: pointer;
+            }
+            
+            form.example button:hover {
+                background: #0b7dda;
+            }
+            
+            form.example::after {
+                content: "";
+                clear: both;
+                display: table;
+            }
+            /*media queries*/
+            
+            @media only screen and(max-width:768px) {}
+            
+            footer {
+                font-family: inherit;
+                display: flex;
+                height: 50px;
+                padding-top: 3px;
+                padding-bottom: 3px;
+            }
