--- a/css/kapcsolat.css
+++ b/css/kapcsolat.css
@@ -1,40 +1,39 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    background-color: rgb(27, 23, 23);
-}
-
-
-/* .container1 {
-    background-color: rgba(rgb(46, 46, 46));
-    width: auto;
-} */
-
-main {
-    margin: 0 auto;
-}
-
-fieldset {
-    border: 4px solid black;
-    border-radius: 25px;
-    background-color: aqua;
-    width: 30%;
-    padding: 10px;
-}
-
-#backgroundPicture {
-    background-image: url("../pics/gyujtes/contact.jpg");
-    background-repeat: no-repeat;
-    width: 100%;
-}
-
-.contactpieces {
-    opacity: 1.0;
-}
-
-footer {
-    position: fixed;
-    padding: 20px;
-}
+        * {
+            box-sizing: border-box;
+        }
+        
+        html {
+            height: 100%;
+        }
+        
+        body {
+            display: block;
+        }
+        
+        main {
+            height: 55%;
+            background-image: url("../pics/gyujtes/contact.jpg");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+        
+        .container,
+        .row {
+            background-color: inherit;
+        }
+        
+        fieldset {
+            border: 4px solid black;
+            border-radius: 25px;
+            background-color: aqua;
+            width: 25%;
+            padding: 10px;
+        }
+        
+        footer {
+            font-family: inherit;
+            background-color: inherit;
+            height: 30%;
+            padding-top: 3px;
+            padding-bottom: 3px;
+        }
