--- a/css/bemutatkozas.css
+++ b/css/bemutatkozas.css
@@ -1,9 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 * {
     box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 body {
     background-color: RGB(117, 77, 149);
     /* font-family: 'Great Vibes', cursive; */
@@ -32,6 +32,10 @@ header {
 
 #idezet {
     text-align: center;
+}
+
+section {
+    padding-bottom: 15px;
 }
 
 .img-fluid {
