--- a/css/mese.css
+++ b/css/mese.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url("../pics/gyujtes/multicolored.jpg");
+    /* background-image: url("../pics/gyujtes/multicolored.jpg"); */
     font-family: Arial;
 }
 
