--- a/css/butor.css
+++ b/css/butor.css
@@ -431,12 +431,6 @@ img {
 
 main {
     width: 100%;
-    /* background-color: #4e2f1a; */
-    background-image: url(../butor/ahb.jpg);
-    background-position: right;
-    background-repeat: no-repeat;
-    background-repeat: repeat-y;
-    background-color: rgb(100, 72, 2);
 }
 
 #golyaslogo,
@@ -478,4 +472,12 @@ h4 {
 #kep8 {
     display: block;
     margin: 0 auto 2px auto;
+}
+
+footer {
+    width: 100%;
+    background-image: url(../butor/ahb.jpg);
+    background-repeat: repeat;
+    background-repeat: repeat-x;
+    background-color: rgb(100, 72, 2);
 }
