--- a/css/kapcsolat.css
+++ b/css/kapcsolat.css
@@ -2,12 +2,9 @@
             box-sizing: border-box;
         }
         
-        html {
-            height: 100%;
-        }
-        
+        html,
         body {
-            display: block;
+            height: 100%;
         }
         
         main {
@@ -22,18 +19,35 @@
             background-color: inherit;
         }
         
+        strong {
+            color: black;
+        }
+        
         fieldset {
             border: 4px solid black;
-            border-radius: 25px;
-            background-color: aqua;
-            width: 25%;
+            border-radius: 15px;
+            background-image: url("../pics/gyujtes/jegyzetfuzet.jpg");
+            background-color: rgb(102, 102, 102);
+            max-width: 30%;
             padding: 10px;
+        }
+        /*  footer {
+            font-family: inherit;
+            background-color: inherit;
+            height: 30%;
+            width: 100%;
+        } */
+        /*Media queries*/
+        
+        @media screen and (min-width: 480px) {
+            body {
+                background-color: lightgreen;
+            }
         }
         
         footer {
             font-family: inherit;
             background-color: inherit;
             height: 30%;
-            padding-top: 3px;
-            padding-bottom: 3px;
+            width: 100%;
         }
