--- a/css/restauralas.css
+++ b/css/restauralas.css
@@ -105,14 +105,15 @@ ul ul a {
 
 .btn {
     border: 1px solid;
+    margin-top: 3px;
 }
 
 #btnElore {
-    background-color: rgb(243, 170, 0);
+    background-color: rgb(247, 236, 211);
 }
 
 #keplistagomb {
-    background-color: rgb(243, 170, 0);
+    background-color: rgb(247, 236, 211);
 }
 
 #cim {
@@ -155,23 +156,6 @@ h4 {
     font-size: 15px;
     font-weight: 300;
 }
-
-
-/* .col-sm-6 {
-    text-align: center;
-    width: 20%;
-} */
-
-
-/* .col-md-2 {
-    display: flex;
-    width: auto;
-}
-
-.col-md-10 {
-    display: relative;
-    width: auto;
-} */
 
 li {
     height: 20px;
